<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <vastdb-sdk.airlift.version>206</vastdb-sdk.airlift.version>

	    <vastdb-sdk.ndb-common.version>5.3.0.1</vastdb-sdk.ndb-common.version>
    </properties>

    <groupId>com.vastdata.vdb</groupId>
    <artifactId>sdk</artifactId>
    <version>5.3.0.1</version>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>ndb</groupId>
            <artifactId>ndb-common</artifactId>
            <version>${vastdb-sdk.ndb-common.version}</version>
        </dependency>
        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>configuration</artifactId>
            <version>${vastdb-sdk.airlift.version}</version>
        </dependency>
        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>http-client</artifactId>
            <version>${vastdb-sdk.airlift.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-core</artifactId>
            <version>13.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-netty</artifactId>
            <version>13.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-unsafe</artifactId>
            <version>13.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-vector</artifactId>
            <version>13.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-core</artifactId>
            <version>1.12.172</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>1.12.172</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.28</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.10</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <distributionManagement>
        <repository>
            <id>vast-maven-release</id>
            <name>VAST Maven Release Repository</name>
            <url>s3://vast-maven-repo/release</url>
        </repository>
    </distributionManagement>

    <repositories>
	    <repository>
            <id>central</id>
            <name>Maven Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
	    </repository>
	    <repository>
	        <id>vastdb-maven-release</id>
	        <url>https://vast-maven-repo.s3.amazonaws.com/release</url>
	    </repository>
    </repositories>

    <pluginRepositories>
	    <pluginRepository>
            <id>central</id>
            <name>Maven Central Plugin Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
	    </pluginRepository>
    </pluginRepositories>
    
    <build>
        <sourceDirectory>./src/main/java</sourceDirectory>
        <testSourceDirectory>./test/java</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration combine.self="override">
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <fork>false</fork>
                </configuration>
            </plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-jar-plugin</artifactId>
		        <version>3.4.2</version>
		        <executions>
		            <execution>
		                <goals>
		                    <goal>test-jar</goal>
		                </goals>
		            </execution>
		        </executions>
	        </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>

	    <extensions>
	        <extension>
		        <groupId>com.github.seahen</groupId>
		        <artifactId>maven-s3-wagon</artifactId>
		        <version>1.3.3</version>
	        </extension>
	    </extensions>


    </build>

</project>
